Major Update to Backend

--- a/templates/company.html
+++ b/templates/company.html
@@ -22,7 +22,7 @@
               <a class="nav-link active" aria-current="page" href="{{url_for('dashboard',id=id)}}">Dashboard</a>
             </li>
               <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{{url_for('company',id=id)}}">Company</a>
+              <a class="nav-link active" aria-current="page" href="{{url_for('company',id=id)}}">Team</a>
             </li>
 
           </ul>
