--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -129,7 +129,7 @@
             </div>
             </div>
 
-            <div id="bottom_div">
+            <div id="bottom_div" style="width: 500px;">
                 <input type="button" name="answer" value="Show Urls" class = "primary-button" id="urlIdButton" onclick="showUrl()" />
                 
                 <div id = "urlID" style="display: none">
