--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,6 @@
                     </li>
                     
                     <li class="nav-item">
-                      <a class="nav-link" href="{{url_for('contact')}}">Contact </a>
-                    </li>
-                    <li class="nav-item">
                       <a class="nav-link" href="{{url_for('login')}}">Login </a>
                     </li>
                     <li class="nav-item">
@@ -229,7 +226,7 @@
         </div>
         <div class="detail-box">
           <p>
-            The maintenance and development of the website need your support.
+            We'd love it if you want to support our project and contribute towards it's developement.
           </p>
           <div>
             
@@ -396,10 +393,10 @@
             </div>
             <div class="detail-box">
               <h3>
-                4700+
+                STUDENTS
               </h3>
               <h6>
-               UPLOADED ARTICLES
+               LOVE IT
               </h6>
             </div>
           </div>
@@ -409,10 +406,10 @@
             </div>
             <div class="detail-box">
               <h3>
-                4500+
+                COLLABORATION
               </h3>
               <h6>
-                CLIENTS
+                UNLIKE ANY PLATFORM
               </h6>
             </div>
           </div>
@@ -434,60 +431,6 @@
     </div>
   </section>
 
-
-  <!-- end why section -->
-
-  <!-- client section -->
-  <!-- end client section -->
-  <!-- contact section -->
-  <section class="contact_section layout_padding">
-    <div class="container contact_heading">
-      <h2>
-        Contact Us
-      </h2>
-      <p>
-        psum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-      </p>
-    </div>
-    <div class="container">
-      <form>
-        <div class="row">
-          <div class="form-group col-6">
-            <label for="inputName4">Name</label>
-            <input type="text" class="form-control" id="inputName4"/>
-          </div>
-          <div class="form-group col-6">
-            <label for="inputEmail4">Email</label>
-            <input type="email" class="form-control" id="inputEmail4"/>
-          </div>
-
-        </div>
-        <div class="row">
-          <div class="form-group col-6">
-            <label for="inputNumber4">Phone number</label>
-            <input type="tel" class="form-control" id="inputNumber4"/>
-          </div>
-          <div class="form-group col-6">
-            <label for="inputState">Select Service</label>
-            <select id="inputState" class="form-control">
-              <option selected=""></option>
-              <option>...</option>
-            </select>
-          </div>
-
-        </div>
-        <div class="form-group">
-          <label for="inputMessage">Message</label>
-          <input type="text" class="form-control" id="inputMessage" placeholder=""/>
-        </div>
-    </div>
-
-    <div class="d-flex justify-content-center">
-      <button type="submit" class="">Send</button>
-    </div>
-    </form>
-
-  </section>
 
 
   <!-- end contact section -->
