--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
                     <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
                   </div>
 
-                  <a class="small text-muted" href="#!">Forgot password?</a>
+                  <!-- <a class="small text-muted" href="#!">Forgot password?</a> -->
                   <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="/register"
                       style="color: #393f81;">Register here</a></p>
              
