--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -148,7 +148,7 @@
     <section class="info_section layout_padding2-bottom">
       <div class="container">
         <h3 class="">
-          BigWing
+          STARBLAST
         </h3>
       </div>
       <div class="container info_content">
@@ -159,74 +159,22 @@
             <div class="col-md-6 col-lg-4">
               <div class="d-flex">
                 <h5>
-                  Useful Link
+                  Useful Links
                 </h5>
               </div>
               <div class="d-flex ">
                 <ul>
                   <li>
-                    <a href="">
-                      About Us
-                    </a>
+                    <a class="nav-link " href={{url_for('index')}}>Home Page </a>
                   </li>
                   <li>
-                    <a href="">
-                      About services
-                    </a>
+                    <a class="nav-link " href={{url_for('services')}}>Services </a>
                   </li>
                   <li>
-                    <a href="">
-                      About Departments
-                    </a>
+                    <a class="nav-link " href={{url_for('pricing')}}>Pricing </a>
                   </li>
                   <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
-                  </li>
-                </ul>
-                <ul class="ml-3 ml-md-5">
-
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <div class="d-flex">
-                <h5>
-                  The Services
-                </h5>
-              </div>
-              <div class="d-flex ">
-                <ul>
-                  <li>
-                    <a href="">
-                      About Us
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      About Departments
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Services
-                    </a>
-                  </li>
-                  <li>
-                    <a href="">
-                      Contact Us
-                    </a>
+                    <a class="nav-link" href="{{url_for('signup')}}">Signup </a>
                   </li>
                 </ul>
                 <ul class="ml-3 ml-md-5">
@@ -244,29 +192,50 @@
                 <ul>
                   <li>
                     <a href="">
-                      About Us
+                      Email Us :  starblast@gmail.com
                     </a>
                   </li>
                   <li>
                     <a href="">
-                      About services
+                      Location :  Sydney, NSW
+                    </a> 
+                  </li>
+                  
+                </ul>
+                <ul class="ml-3 ml-md-5">
+
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <div class="d-flex">
+                <h5>
+                  Meet The Developers
+                </h5>
+              </div>
+              <div class="d-flex ">
+                <ul>
+                  <li>
+                    <a href="https://github.com/rudrajikadra" target="_blank">
+                      Rudra Jikadra
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      About Departments
+                    <a href="https://github.com/ShridharPrabhuraman" target="_blank">
+                      Shridhar Prabhuraman
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      Services
+                    <a href="https://github.com/vibhu444" target="_blank">
+                      Vibhu Sharma
                     </a>
                   </li>
                   <li>
-                    <a href="">
-                      Contact Us
+                    <a href="https://github.com/Pleasanter" target="_blank">
+                      Yuechuan
                     </a>
                   </li>
+                  
                 </ul>
                 <ul class="ml-3 ml-md-5">
 
